--- a/app/src/main/res/drawable/ic_back.xml
+++ b/app/src/main/res/drawable/ic_back.xml
@@ -1,20 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="20dp"
-    android:height="20dp"
-    android:viewportWidth="20"
-    android:viewportHeight="20">
+    android:width="25dp"
+    android:height="25dp"
+    android:viewportWidth="25"
+    android:viewportHeight="25">
   <path
-      android:pathData="M6,1L1,6.625L6,12.25"
+      android:pathData="M8.333,5.208L3.125,10.417L8.333,15.625"
       android:strokeLineJoin="round"
-      android:strokeWidth="2"
+      android:strokeWidth="2.08333"
       android:fillColor="#00000000"
-      android:strokeColor="#0FA958"
+      android:strokeColor="#F8F8F8"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M1,6.625H9C14.523,6.625 19,11.6616 19,17.875V19"
+      android:pathData="M3.125,10.417H11.458C17.212,10.417 21.875,15.08 21.875,20.833V21.875"
       android:strokeLineJoin="round"
-      android:strokeWidth="2"
+      android:strokeWidth="2.08333"
       android:fillColor="#00000000"
-      android:strokeColor="#0FA958"
+      android:strokeColor="#F8F8F8"
       android:strokeLineCap="round"/>
 </vector>
