--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -6,13 +6,13 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:paddingHorizontal="12dp"
-    android:paddingVertical="6dp"
-    >
+    android:paddingVertical="6dp" >
 
+    <!--RESTAURANT IMAGE-->
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_image"
         android:layout_width="100dp"
-        android:layout_height="120dp"
+        android:layout_height="125dp"
         app:cardCornerRadius="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -34,6 +34,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:paddingStart="12dp"
+        android:paddingTop="3dp"
+        android:paddingBottom="7dp"
         android:orientation="vertical"
         android:gravity="center_vertical"
         app:layout_constraintTop_toTopOf="parent"
@@ -43,13 +45,18 @@
 
         <TextView
             android:id="@+id/tv_restaurant_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Salad Stop, Bekasi Utara"
+            android:layout_width="match_parent"
+            android:layout_height="33dp"
+            android:gravity="center_vertical"
             android:ellipsize="end"
-            android:maxLines="1"
+            android:maxLines="2"
             android:textStyle="bold"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            app:autoSizeTextType="uniform"
+            app:autoSizeMinTextSize="13sp"
+            app:autoSizeMaxTextSize="16sp"
+            app:autoSizeStepGranularity="1sp"
+            tools:text="Salad Stop, Bekasi Utaraaaa " />
 
         <LinearLayout
             android:layout_width="match_parent"
