--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.auth.LoginActivity">
+    tools:context=".ui.auth.RegisterActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             android:layout_height="230dp"
             android:layout_marginTop="32dp"
             android:layout_marginHorizontal="36dp"
-            android:src="@drawable/bg_login"
+            android:src="@drawable/bg_register"
             android:alpha="0"
             tools:alpha="1"
             app:layout_constraintTop_toTopOf="parent" />
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:layout_marginHorizontal="36dp"
-            android:text="Login"
+            android:text="Register Now!"
             android:textSize="24sp"
             android:textStyle="bold"
             android:alpha="0"
@@ -42,11 +42,39 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="36dp"
-            android:text="To explore healthy foods with us!"
+            android:text="To explore healthy foods with us"
             android:textSize="16sp"
             android:alpha="0"
             tools:alpha="1"
             app:layout_constraintTop_toBottomOf="@id/tv_title" />
+
+        <!--USER NAME FIELD-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/edtl_name"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginHorizontal="36dp"
+            android:alpha="0"
+            android:hint="Name"
+            app:startIconDrawable="@drawable/ic_user"
+            app:boxCornerRadiusBottomEnd="20dp"
+            app:boxCornerRadiusBottomStart="20dp"
+            app:boxCornerRadiusTopEnd="20dp"
+            app:boxCornerRadiusTopStart="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
+            tools:alpha="1">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:alpha="0"
+                android:inputType="text"
+                tools:alpha="1" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <!--EMAIL FIELD-->
         <com.google.android.material.textfield.TextInputLayout
@@ -54,7 +82,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="18dp"
             android:layout_marginHorizontal="36dp"
             android:alpha="0"
             android:hint="Email"
@@ -63,7 +91,7 @@
             app:boxCornerRadiusBottomStart="20dp"
             app:boxCornerRadiusTopEnd="20dp"
             app:boxCornerRadiusTopStart="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
+            app:layout_constraintTop_toBottomOf="@+id/edtl_name"
             tools:alpha="1">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -86,6 +114,8 @@
             android:layout_marginTop="18dp"
             android:alpha="0"
             android:hint="Password"
+            app:counterEnabled="true"
+            app:helperText="*Should contain at least 6 char"
             app:startIconDrawable="@drawable/ic_password"
             app:endIconMode="password_toggle"
             app:boxCornerRadiusBottomEnd="20dp"
@@ -105,38 +135,21 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <!--BUTTON LOGIN-->
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="36dp"
-            android:layout_marginTop="32dp"
-            android:text="Login"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:background="@drawable/bg_button_filled"
-            android:alpha="0"
-            tools:alpha="1"
-            app:layout_constraintTop_toBottomOf="@+id/edtl_password" />
-
-        <!--BUTTON SIGN UP-->
+        <!--SIGN UP BUTTON-->
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_signup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="36dp"
-            android:layout_marginTop="18dp"
-            android:layout_marginBottom="32dp"
+            android:layout_marginVertical="48dp"
             android:alpha="0"
-            android:background="@drawable/bg_button_stroke"
-            android:text="Sign Up"
-            android:textColor="@color/my_green"
+            android:background="@drawable/bg_button_filled"
+            android:text="SIGN UP"
+            android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_login"
+            app:layout_constraintTop_toBottomOf="@+id/edtl_password"
             tools:alpha="1"
             tools:layout_editor_absoluteX="24dp" />
 
