--- a/app/src/main/res/layout/activity_restaurant_detail.xml
+++ b/app/src/main/res/layout/activity_restaurant_detail.xml
@@ -33,7 +33,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:paddingHorizontal="12dp"
                 android:paddingBottom="12dp">
 
                 <!--BACK BUTTON-->
@@ -41,6 +40,7 @@
                     android:id="@+id/btn_back"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="12dp"
                     android:layout_marginTop="18dp"
                     android:minWidth="0dp"
                     android:padding="12dp"
@@ -53,8 +53,9 @@
                 <TextView
                     android:id="@+id/tv_restaurant_name"
                     android:layout_width="match_parent"
-                    android:layout_marginTop="24dp"
                     android:layout_height="45dp"
+                    android:layout_marginHorizontal="12dp"
+                    android:layout_marginTop="24dp"
                     android:gravity="bottom"
                     android:textSize="24sp"
                     android:textStyle="bold"
@@ -74,6 +75,7 @@
                     android:id="@+id/tv_location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
                     android:text="Jakarta Pusat"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_name" />
@@ -92,6 +94,7 @@
                     android:id="@+id/tv_open_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="12dp"
                     android:text="Open Now"
                     android:textColor="@color/my_green"
                     app:layout_constraintStart_toEndOf="@+id/divider"
@@ -102,6 +105,7 @@
                     android:id="@+id/tv_rating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
                     android:layout_marginTop="12dp"
                     android:drawablePadding="6dp"
                     android:gravity="center_vertical"
@@ -159,6 +163,7 @@
                     android:id="@+id/tv_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="12dp"
                     android:layout_marginTop="12dp"
                     android:drawablePadding="6dp"
                     android:gravity="center_vertical"
@@ -228,7 +233,7 @@
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
-               android:paddingEnd="12dp"
+               android:paddingEnd="18dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
 
