--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,7 +42,6 @@
                 android:id="@+id/title_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="12dp"
                 android:layout_marginTop="170dp"
                 android:layout_gravity="bottom">
 
@@ -51,6 +50,7 @@
                     android:id="@+id/tv_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="12dp"
                     android:layout_marginTop="18dp"
                     android:text="FIND HEALTHY FOODS"
                     android:textSize="24sp"
@@ -62,6 +62,7 @@
                     android:id="@+id/tv_subtitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="12dp"
                     android:text="around you"
                     android:textSize="16sp"
                     app:layout_constraintTop_toBottomOf="@id/tv_title" />
@@ -72,6 +73,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="18dp"
+                    android:layout_marginStart="12dp"
                     android:layout_marginEnd="12dp"
                     android:background="@drawable/bg_button_stroke"
                     android:iconifiedByDefault="false"
@@ -87,6 +89,7 @@
                     android:id="@+id/btn_search"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="12dp"
                     android:minWidth="0dp"
                     android:padding="12dp"
                     android:drawableStart="@drawable/ic_search"
@@ -110,7 +113,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingHorizontal="12dp"
-                        android:layout_marginEnd="12dp"
+                        android:layout_marginHorizontal="12dp"
                         android:layout_gravity="center"
                         android:minWidth="0dp"
                         android:minHeight="33dp"
@@ -171,6 +174,7 @@
                                 style="@style/MyChip"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginEnd="12dp"
                                 android:text="others"
                                 android:textColor="@color/my_green"
                                 app:chipStrokeColor="@color/my_green"
