--- a/app/src/main/res/layout/item_restaurant_info.xml
+++ b/app/src/main/res/layout/item_restaurant_info.xml
@@ -13,6 +13,7 @@
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="250dp"
+        app:cardElevation="0dp"
         app:cardCornerRadius="20dp"
         app:layout_constraintTop_toTopOf="parent">
 
