--- a/app/src/main/res/layout/activity_food_detector_camera.xml
+++ b/app/src/main/res/layout/activity_food_detector_camera.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ui_elements.FoodDetectorCamera">
+    tools:context=".ui.food_detector.FoodDetectorCamera">
 
   <androidx.camera.view.PreviewView
       android:id="@+id/viewFinder"
