--- a/app/src/main/res/layout/activity_food_validator_text.xml
+++ b/app/src/main/res/layout/activity_food_validator_text.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ui_elements.FoodValidatorText">
+    tools:context=".ui.food_detector.FoodValidatorText">
 
     <Button
         android:id="@+id/btn_back"
