--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -11,15 +11,16 @@
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
-    <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.bintang.bangkitcapstoneproject.ui.food_detector.FoodDetectorFragment"
-        android:label="@string/title_food_detector"
-        tools:layout="@layout/fragment_dashboard" />
+    <activity
+        android:id="@+id/navigation_food_detector"
+        android:name="com.bintang.bangkitcapstoneproject.ui.food_detector.FoodDetectorCamera"
+        android:label="activity_food_detector_camera"
+        tools:layout="@layout/activity_food_detector_camera" />
 
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.bintang.bangkitcapstoneproject.ui.profile.ProfileFragment"
         android:label="@string/title_profile"
         tools:layout="@layout/fragment_profile" />
+
 </navigation>
