--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="my_green">#FF3F9B61</color>
     <color name="my_green_100">#CCE8D8</color>
+    <color name="red">#FFE93333</color>
     <color name="grey">#FFC4C4C4</color>
     <color name="light_grey">#FFF8F8F8</color>
     <color name="purple_200">#FFBB86FC</color>
@@ -11,4 +12,5 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white_transparant">#CDFFFFFF</color>
 </resources>
