--- a/app/src/main/res/layout/activity_restaurant_detail.xml
+++ b/app/src/main/res/layout/activity_restaurant_detail.xml
@@ -65,7 +65,7 @@
                     app:autoSizeMinTextSize="18sp"
                     app:autoSizeMaxTextSize="24sp"
                     app:autoSizeStepGranularity="1sp"
-                    android:text="Salad Stop, Plaza Indonesia"
+                    tools:text="Salad Stop, Plaza Indonesia"
                     app:layout_constraintTop_toBottomOf="@id/btn_back"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -76,7 +76,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
-                    android:text="Jakarta Pusat"
+                    tools:text="Jakarta Pusat"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_name" />
 
@@ -85,7 +85,7 @@
                     android:id="@+id/divider"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=" - "
+                    android:text="@string/devider2"
                     app:layout_constraintStart_toEndOf="@+id/tv_location"
                     app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_name" />
 
@@ -95,7 +95,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="12dp"
-                    android:text="Open Now"
+                    tools:text="Open Now"
                     android:textColor="@color/my_green"
                     app:layout_constraintStart_toEndOf="@+id/divider"
                     app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_name" />
@@ -109,7 +109,6 @@
                     android:layout_marginTop="12dp"
                     android:drawablePadding="6dp"
                     android:gravity="center_vertical"
-                    android:text="4.8 (128)"
                     android:textSize="13sp"
                     app:drawableStartCompat="@drawable/ic_star"
                     app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +120,7 @@
                     android:id="@+id/divider1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="|"
+                    android:text="@string/devider3"
                     android:textSize="15sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_rating"
@@ -137,7 +136,6 @@
                     android:layout_marginTop="12dp"
                     android:drawablePadding="6dp"
                     android:gravity="center_vertical"
-                    android:text="3.0 Km"
                     android:textSize="13sp"
                     app:drawableStartCompat="@drawable/ic_location"
                     app:layout_constraintEnd_toStartOf="@+id/tv_price"
@@ -150,7 +148,7 @@
                     android:id="@+id/divider2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="|"
+                    android:text="@string/devider3"
                     android:textSize="15sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_price"
@@ -167,7 +165,6 @@
                     android:layout_marginTop="12dp"
                     android:drawablePadding="6dp"
                     android:gravity="center_vertical"
-                    android:text="Expensive"
                     android:textSize="13sp"
                     app:drawableStartCompat="@drawable/ic_price"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -181,19 +178,26 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <!--LIST DETAIL RESTAURANT INFO-->
-    <androidx.core.widget.NestedScrollView
+    <include
+        layout="@layout/item_restaurant_info"
+        android:id="@+id/restaurant_info"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-        <include
-            layout="@layout/item_restaurant_info"
-            android:id="@+id/restaurant_info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+<!--    <androidx.core.widget.NestedScrollView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:background="@color/white"-->
+<!--        app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
 
-    </androidx.core.widget.NestedScrollView>
+<!--        <include-->
+<!--            layout="@layout/item_restaurant_info"-->
+<!--            android:id="@+id/restaurant_info"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content" />-->
+
+<!--    </androidx.core.widget.NestedScrollView>-->
 
     <!--BOTTOM ACTION BAR-->
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -245,7 +249,7 @@
                    android:layout_marginHorizontal="6dp"
                    android:drawableStart="@drawable/ic_call"
                    android:drawablePadding="6dp"
-                   android:text="Call"
+                   android:text="@string/btn_call"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textColor="@color/white"
@@ -259,7 +263,7 @@
                    android:layout_marginHorizontal="6dp"
                    android:drawableStart="@drawable/ic_navigation"
                    android:drawablePadding="6dp"
-                   android:text="Navigate"
+                   android:text="@string/btn_navigate"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textColor="@color/white"
@@ -273,7 +277,7 @@
                    android:paddingHorizontal="12dp"
                    android:drawableStart="@drawable/ic_share"
                    android:drawablePadding="6dp"
-                   android:text="Share"
+                   android:text="@string/btn_share"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold"
