--- a/app/src/main/res/drawable/ic_back.xml
+++ b/app/src/main/res/drawable/ic_back.xml
@@ -1,20 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="25dp"
-    android:height="25dp"
-    android:viewportWidth="25"
-    android:viewportHeight="25">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M8.333,5.208L3.125,10.417L8.333,15.625"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2.08333"
-      android:fillColor="#00000000"
-      android:strokeColor="#F8F8F8"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M3.125,10.417H11.458C17.212,10.417 21.875,15.08 21.875,20.833V21.875"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2.08333"
-      android:fillColor="#00000000"
-      android:strokeColor="#F8F8F8"
-      android:strokeLineCap="round"/>
+      android:pathData="M10,9V5l-7,7 7,7v-4.1c5,0 8.5,1.6 11,5.1 -1,-5 -4,-10 -11,-11z"
+      android:fillColor="#ffffff"/>
 </vector>
