--- a/app/src/main/res/layout/activity_food_detector_camera.xml
+++ b/app/src/main/res/layout/activity_food_detector_camera.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.food_detector.FoodDetectorCamera">
@@ -10,13 +9,15 @@
   <androidx.camera.view.PreviewView
       android:id="@+id/viewFinder"
       android:layout_width="match_parent"
-      android:layout_height="match_parent" />
+      android:layout_height="match_parent"
+      tools:layout_editor_absoluteX="-16dp"
+      tools:layout_editor_absoluteY="0dp" />
 
   <ImageView
       android:id="@+id/captureImage"
-      android:layout_width="60dp"
-      android:layout_height="60dp"
-      android:layout_marginBottom="16dp"
+      android:layout_width="75dp"
+      android:layout_height="75dp"
+      android:layout_marginBottom="32dp"
       android:contentDescription="@string/capture_image_button"
       app:layout_constraintBottom_toTopOf="@+id/search_button"
       app:layout_constraintEnd_toEndOf="parent"
@@ -26,23 +27,27 @@
 
   <ImageView
       android:id="@+id/switchCamera"
-      android:layout_width="40dp"
-      android:layout_height="40dp"
+      android:layout_width="50dp"
+      android:layout_height="50dp"
       android:layout_marginTop="16dp"
       android:layout_marginEnd="16dp"
+      android:contentDescription="@string/switch_camera"
       app:layout_constraintEnd_toEndOf="@+id/viewFinder"
       app:layout_constraintTop_toTopOf="parent"
-      app:srcCompat="@drawable/ic_switch_camera"
-      android:contentDescription="@string/switch_camera" />
+      app:srcCompat="@drawable/ic_switch_camera" />
 
-  <Button
+  <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/search_button"
-      android:layout_width="match_parent"
-      android:layout_height="48dp"
+      android:layout_width="0dp"
+      android:layout_height="62dp"
+      android:background="@drawable/bg_button_filled"
       android:text="@string/search_food_text"
-      app:layout_constraintBottom_toBottomOf="@+id/viewFinder"
+      android:textColor="@color/white"
+      android:textSize="16sp"
+      android:textStyle="bold"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.0"
-      app:layout_constraintStart_toStartOf="parent" />
+      app:layout_constraintStart_toStartOf="parent"
+      tools:alpha="1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
