--- a/app/src/main/res/layout/activity_restaurant_detail.xml
+++ b/app/src/main/res/layout/activity_restaurant_detail.xml
@@ -85,6 +85,7 @@
                     android:id="@+id/divider"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="6dp"
                     android:text="@string/devider2"
                     app:layout_constraintStart_toEndOf="@+id/tv_location"
                     app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_name" />
@@ -94,7 +95,7 @@
                     android:id="@+id/tv_open_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="12dp"
+                    android:layout_marginStart="6dp"
                     tools:text="Open Now"
                     android:textColor="@color/my_green"
                     app:layout_constraintStart_toEndOf="@+id/divider"
